# HAY2023

./: .gitignore  BUILD_RESULTS.md  IMPLEMENTATION_SUMMARY.md  PUBLISH_DESKTOP.md  QUICKSTART.md  QUICK_REFERENCE.md  capacitor.config.ts  electron-builder.yml  index.html  package-lock.json  package.json  push-to-github.ps1  server.js  tauri.conf.json  vite.config.ts
.github/workflows/: release.yml  tauri-build.yml  web-deploy.yml
docs/: GITHUB_SETUP.md  PUSH_NOTIFICATIONS.md  WINDOWS_SECURITY.md
electron/: main.js  preload.js
scripts/: generate-app-icons.ps1  generate-ico.js  generate-icons.js  verify-icons.js
src/: App.tsx
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: QuestionForm.tsx  ShareButton.tsx  SplashScreen.tsx
src/hooks/: useBrowserNotifications.ts  useEnhancedPushNotifications.ts  useOfflineQuestions.ts  useQuestions.ts  useRealtimeNotifications.ts  useSettings.ts
src/lib/: exportUtils.ts  i18n.ts  pushTokenManager.ts
src/pages/: Admin.tsx  Index.tsx  Install.tsx
supabase/functions/send-notification/: index.ts
supabase/migrations/: 20260218_allow_public_notif_read.sql
